# meituan-AutoSolver

./: .gitignore  README.md  app.py  main.py  pyproject.toml  solver.py  solver_v10.py  solver_v11.py  solver_v12.py  solver_v17.py  solver_v18.py  solver_v19.py  solver_v20.py  solver_v21.py  solver_v22.py  test_detailed.py  test_server.py
autosolver/: __init__.py
autosolver/agent/: __init__.py  agent.py  tools.py
autosolver/algorithms/: __init__.py  genetic.py  greedy.py  or_tools_solver.py  registry.py
autosolver/models/: __init__.py  delivery_point.py  order.py  restaurant.py  rider.py  scenario.py
autosolver/simulation/: __init__.py  simulation.py
autosolver/visualization/: __init__.py  visualizer.py
