[project]
name = "meituan-AutoSolver"
version = "1.0.0"
description = "AI Agent for Autonomous Delivery Allocation Problem Solving"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "openai>=1.30.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "networkx>=3.1",
    "matplotlib>=3.7.0",
    "folium>=0.14.0",
    "streamlit>=1.30.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "ortools>=9.8.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
